tests/snapshots/examples_fixtures/aoc__2024__day02.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/day02.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2024/Day02Solver.flx:7:12
  |
7 |         |> map(/t -> parse_int(t))
  |            ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2024/Day02Solver.flx:14:12
   |
14 |         |> map(/line -> parse_report(line))
   |            ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2024/Day02Solver.flx:24:17
   |
24 |                 push(acc, Shared.int_at(xs, idx) - Shared.int_at(xs, idx + 1)),
   |                 ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `all`.

  examples/aoc/2024/Day02Solver.flx:31:9
   |
31 |         all(ds, /d -> d >= 1 && d <= 3) || all(ds, /d -> d >= -3 && d <= -1)
   |         ^^^

Hint:
  Define it first: let all = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2024/Day02Solver.flx:35:9
   |
35 |         map(arrs, /arr -> concat([|x|], arr))
   |         ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2024/Day02Solver.flx:45:24
   |
45 |             let tail = slice(xs, 1, len(xs))
   |                        ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `concat`.

  examples/aoc/2024/Day02Solver.flx:48:13
   |
48 |             concat(drop_head, keep_head)
   |             ^^^^^^

Hint:
  Define it first: let concat = ...;


error[E004]: Undefined Variable

I can't find a value named `count`.

  examples/aoc/2024/Day02Solver.flx:53:9
   |
53 |         count(reports, /r -> predicate(r))
   |         ^^^^^

Hint:
  Define it first: let count = ...;


error[E004]: Undefined Variable

I can't find a value named `count`.

  examples/aoc/2024/Day02Solver.flx:57:9
   |
57 |         count(reports, /r -> any(try_drops(r), /candidate -> predicate(candidate)))
   |         ^^^^^

Hint:
  Define it first: let count = ...;

Found 9 errors.
== stdout ==
<not executed>
